[package]
name = "bc_rs"
version = "0.7.0"
authors = ["140bpmdubstep", "LeshaInc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.0.2", features = ["socks-proxy"] } 
anyhow = "1.0"
minimp3 = "0.5.0"
log = "0.4.11"
env_logger = "0.10.0"
cpal = "0.14.2"
samplerate = "0.2.4"
sciter-rs = "0.5.58"
regex = "1.4.1"
base64 = "0.21.0"
threadpool = "1.8.1"
webbrowser = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.1"
scraper = "0.14.0"
copypasta = "0.8.2"

[profile.release]
opt-level = "s"