[package]
name = "bc_rs"
version = "0.6.0"
authors = ["140bpmdubstep", "LeshaInc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
anyhow = "1.0"
log = "0.4.11"
env_logger = "0.10.0"
regex = "1.4.1"
webbrowser = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
toml = "0.7.1"
scraper = "0.16.0"
bass-rs = { path = "./bass-rs" }
souvlaki = "0.6.0"
raw-window-handle = "0.5.2"
dioxus = { version = "0.3.2" }
dioxus-desktop = "0.3.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
load_file = "1.0.1"
mime_guess = "2.0.4"
dioxus-router = "0.3.0"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }

[profile.release]
opt-level = "s"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
